@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR_T4
skinparam classBackgroundColor MODEL_COLOR
show members

class NameContainsKeywordsScoredPredicate {
  - keywords: List<String>
  + computeScore(...): Score
  + createPersonComparator(...): Comparator<Person>
  - toScore(...): Score
  - toMatchTier(...): MatchTier
}

class FindRelevance {
  + SCORE_COMPARATOR: Comparator<Score>
}

enum MatchTier <<enumeration>> {
  EXACT_TOKEN
  PREFIX_TOKEN
  SUBSTRING_TOKEN
  NO_MATCH
}

class Score {
  + tier: MatchTier
  + unmatchedCharsCount: int
  + sortKey: String
}

FindRelevance --> MatchTier
FindRelevance -r-> Score
NameContainsKeywordsScoredPredicate ..> FindRelevance
NameContainsKeywordsScoredPredicate ..> Score
Score --> MatchTier

@enduml
